<resources>
    <string name="app_name">Fitary</string>
    <string name="title_activity_workouts">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fitary</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_my_workouts">My workouts</string>
    <string name="menu_social_workouts">Social workouts</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_logout">Logout</string>

    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="title_of_workout">Title of workout</string>
    <string name="username">Username</string>
    <string name="add_exercise">Add exercise</string>
    <string name="exercise">Exercise</string>
    <string name="reps">Reps</string>
    <string name="li_workout_user">User:</string>
    <string name="li_workout_score">Score:</string>
    <string name="li_workout_comment">Comment:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_profile">User profile</string>
    <string name="save_changes">Save changes</string>
    <string name="full_score">Full score</string>
    <string name="nr_of_workouts">Nr. of workouts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_copy">Create copy</string>
    <string name="failed_to_load_workout">Failed to load workout</string>
    <string name="sum_equals">Σ = %1$.2f</string>
    <string name="workout_details">Workout details</string>
</resources>