<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user_workouts">

    <fragment
        android:id="@+id/nav_user_workouts"
        android:name="hu.bme.aut.fitary.ui.userWorkouts.UserWorkoutsFragment"
        android:label="@string/menu_my_workouts"
        tools:layout="@layout/fragment_workouts_user" />

    <fragment
        android:id="@+id/nav_social_workouts"
        android:name="hu.bme.aut.fitary.ui.socialWorkouts.SocialWorkoutsFragment"
        android:label="@string/menu_social_workouts"
        tools:layout="@layout/fragment_workouts_social" />

    <fragment
        android:id="@+id/nav_charts"
        android:name="hu.bme.aut.fitary.ui.charts.ChartsFragment"
        android:label="@string/menu_charts"
        tools:layout="@layout/fragment_chart_bar" />

    <fragment
        android:id="@+id/nav_blank"
        android:name="hu.bme.aut.fitary.ui.BlankFragment"
        android:label="Blank demo"
        tools:layout="@layout/fragment_blank" />
</navigation>